# disruptor

.github/workflows/: ci-example-project.yaml  ci.yaml
projects/bzl_ndn/: .bazelrc  WORKSPACE  shell.nix
projects/bzl_ndn/jar_pack/: BUILD.bazel  JustMain.java
projects/bzl_ndn/python_tar/: BUILD.bazel  config.json  python_tar.py
projects/bzl_ndn/uuid_gen/: BUILD.bazel
projects/bzl_rbe/: .bazelrc
scripts/: shell.sh
tools/ndn/: .bazelrc  BUILD.bazel  WORKSPACE  ndn.rs  shell.nix
tools/ndn/toolchains/: defs.bzl
